# qico

./: .cvsignore  .gitignore  CONFIG  ChangeLog  Changes  FAQ  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.ru  TODO  TodayFixes  acconfig.h  aclocal.m4  autogen.sh  compile  config.h.in  configure  configure.ac  configure.in  cvs_com  mkinstalldirs  qico.conf.sample  qico.passwd.sample  qico.spec  qico.spec.in  qico.substs.sample  qico_0.54si.orig.tar.bz2.delta  qico_0.54si.orig.tar.bz2.id  qico_0.55si.orig.tar.bz2.delta  qico_0.55si.orig.tar.bz2.id  qico_0.57.1xe.orig.tar.bz2.delta  qico_0.57.1xe.orig.tar.bz2.id  qico_0.57.2xe.orig.tar.bz2.delta  qico_0.57.2xe.orig.tar.bz2.id
debian/: .cvsignore  Makefile.am  Makefile.in  README.Debian  changelog  conffiles  control  copyright  dirs  docs  examples  inetd.conf  init.d  qcc.8  qcc.files  qctl.8  qctl.files  qico-common.dirs  qico-common.docs  qico-common.init  qico-common.install  qico-common.postinst  qico-common.postrm  qico-qcc.install  qico.8  qico.dirs  qico.install  rules  services
freebsd/: Makefile  pkg-descr  pkg-install  pkg-plist
lib/: Makefile.am  Makefile.in  dlmalloc.c
man/: Makefile.am  Makefile.in  qcc.8  qctl.8  qico.8
src/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  anylist.c  anylist.h  aso.c  basename.c  binkp.c  binkp.h  bso.c  byteop.h  call.c  charset.h  clserv.c  clserv.h  config.c  crc.c  crc.h  cvsdate.h  daemon.c  defs.h  des.c  des.h  emsi.c  execsh.c  flagexp.c  flagexp.h  flagexp.y  flaglex.c  flaglex.l  freq.c  ftn.c  ftn.h  getsid.c  globals.c  globals.h  gmtoff.c  have.h  (+73 more)
stuff/: Makefile.am  Makefile.in  ftn  fts-0001  koi8r_866.cp  onchat  qhistory  qico.stat  qico.xpm  qlinks  qst_hist.lnk  qst_hist.ses  sfreq  stat.run  synctime  test.pl  tossing
stuff/freebsd/: Makefile  distinfo  pkg-descr  pkg-install  pkg-plist
